# sdk_cpp

./: CMakeLists.txt  README.md
demo/: demo.cpp
speakin/: Api.h  ApiError.h  ApiObj.h  ApiTypes.h  BaseApi.h  BaseObj.h  RecordStream.h  SdkSetting.h  SessionApi.h  SessionApiObj.h  UserApi.h  UserApiObj.h
speakin/core/: Api.cpp  ApiError.cpp  ApiObj.cpp  BaseApi.cpp  BaseObj.cpp  BsonLite.cpp  BsonLite.h  CBson.cpp  CBson.h  CryptUtil.cpp  CryptUtil.h  HttpCurl.cpp  HttpCurl.h  RecordStream.cpp  RequestWarp.cpp  RequestWarp.h  ResponseWarp.cpp  ResponseWarp.h  SdkSetting.cpp  SessionApi.cpp  SessionApiObj.cpp  UserApi.cpp  UserApiObj.cpp  Utils.cpp  Utils.h
